# ColorPicker

./: CMakeLists.txt  README.md  main.cpp
Controllers/: Controller.h  LinuxController.cpp  LinuxController.h  WindowsController.cpp  WindowsController.h
GUI/: Colors.h  GuiBuilder.cpp  GuiBuilder.h
imgui/: CMakeLists.txt
